Trino Deployment & Configurations in detail